--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"child_process": "^1.0.2",
 		"node-fetch": "^3.3.2",
 		"request-promise-native": "^1.0.9"
 	}
