--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"child_process": "^1.0.2",
 		"node-fetch": "^3.3.2",
-		"request-promise-native": "^1.0.9"
+		"request-promise-native": "^1.0.9",
+		"sentiment": "^5.0.2"
 	}
 }
